<resources>
    <string name="app_name">GraduationProject</string>
    <string name="user_login">用户登录</string>
    <string name="doctor_login">医生登录</string>
    <string name="admim_login">管理员登录</string>
    <string name="gobal_hospital">国际医院</string>
    <string name="password_forget">忘记密码</string>
    <string name="sign_in">注册账户</string>
    <string name="hint_user_name">请输入账号</string>
    <string name="hint_user_password">请输入密码</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Null">无</string>
    <string name="office_home">科室主页</string>
    <string name="choice_more_date">全部日期</string>
    <string name="choice_date_forenoon">上午号源</string>
    <string name="choice_date_afternoon">下午号源</string>
    <string name="choice_date_attention_1">当日号仅支持提前预约</string>
    <string name="choice_date_attention_2">已超过可预约时间，请预约其他日期号源</string>
    <string name="confirm_patient">就诊人</string>
    <string name="confirm_patient_add">添加就诊人信息</string>
    <string name="confirm_visit_need">就诊需求(可多选)</string>
    <string name="confirm_checkobx1">问诊</string>
    <string name="confirm_checkobx2">开药</string>
    <string name="confirm_checkobx3">检查</string>
    <string name="confirm_checkobx4">复诊</string>
    <string name="confirm_checkobx5">手术</string>
    <string name="confirm_checkobx6">其他</string>
    <string name="confirm_informaition">挂号信息</string>
    <string name="confirm_hospital_name">就诊医院</string>
    <string name="confirm_office_name">就诊科室</string>
    <string name="confirm_doctor_dowell">医生专长</string>
    <string name="confirm_doctor_cost">挂号服务费</string>
    <string name="confirm_date">挂号日期</string>
    <string name="confirm_hospital_name_bean">绵阳国际医院</string>
    <string name="confirm_confirem">确认挂号</string>
    <string name="office_info_office_name">心脏门诊外科</string>
    <string name="office_well_sick">擅长疾病：</string>
    <string name="office_info_well_sick_info">暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍暂无介绍</string>
    <string name="office_info_office_info">科室介绍：</string>
    <string name="office_info_doctor_name">科室医生</string>
    <string name="testName">郭建忠</string>
    <string name="Patient">就诊人：</string>
    <string name="no_more">没有更多了</string>
    <string name="wait_for_number">待取号</string>
    <string name="doctor_title">医生职称</string>
    <string name="docotr_title_maindoc">主治医师</string>
    <string name="visit_time">就诊时间</string>
    <string name="test_time">2020-05-20</string>
    <string name="illealdetials">病情说明</string>
    <string name="Illels_details">请在此输入病情详情,最多80字</string>
    <string name="test_num">123456123456123456</string>
    <string name="doctor_cost">医事服务费</string>
    <string name="test_cost">50.00元</string>
    <string name="order_id">挂号单号</string>
    <string name="explanation">相关说明</string>
    <string name="about_explanation">【取号】 就诊当天需在11：30前取号，未取号的视为爽约，该号不退不换；
        【退号】未到就诊当天可在线忒好，就诊当天未取号可在08：00前在医院自助机办理退号；已取号可凭挂号单在11：30前在窗口办理退号，逾期将不可办理退号退费：</string>
    <string name="back_num">退号</string>
    <string name="name">姓名</string>
    <string name="certificate_type">证件类型</string>
    <string name="identity_card">居民身份证</string>
    <string name="certificate_num">证件号码</string>
    <string name="national">民族</string>
    <string name="test_national">汉族</string>
    <string name="working_station">工作单位</string>
    <string name="working_place_test">西南科技大学</string>
    <string name="home_address">家庭住址</string>
    <string name="test_home_address">河北省河北省河北省河北省</string>
    <string name="call_phone">联系电话</string>
    <string name="test_call_phone">12345612345</string>
    <string name="save">保存</string>
    <string name="my_info">个人信息</string>
    <string name="order_query">订单查询</string>
    <string name="sign_out">注销登录</string>

</resources>
