<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserInfoActivity"
    android:background="@drawable/background_shadow">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/user_illness_detials_Constraint1"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/user_info_user_name1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/user_info_user_name1"
            app:layout_constraintTop_toTopOf="@id/user_info_user_name1"
            android:layout_marginStart="100dp"
            android:text="@string/testName"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/user_info_user_name"
            android:background="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_info_user_name1"
            app:layout_constraintTop_toTopOf="@id/user_info_user_name1"
            android:layout_marginTop="60dp"
            android:id="@+id/user_info_certificate_type1"
            android:text="@string/certificate_type"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@id/user_info_user_name"
            app:layout_constraintTop_toTopOf="@id/user_info_certificate_type1"
            android:id="@+id/user_info_certificate_type"
            android:text="@string/identity_card"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_info_certificate_type1"
            app:layout_constraintTop_toTopOf="@id/user_info_certificate_type1"
            android:layout_marginTop="60dp"
            android:id="@+id/user_info_certificate_num1"
            android:text="@string/certificate_num"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_info_certificate_type"
            app:layout_constraintTop_toTopOf="@id/user_info_certificate_num1"
            android:text="@string/test_num"
            android:textSize="20sp"
            android:maxLength="18"
            android:textColor="#000000"
            android:id="@+id/user_info_certificate_num"
            android:background="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_info_certificate_num1"
            app:layout_constraintTop_toTopOf="@id/user_info_certificate_num1"
            android:layout_marginTop="60dp"
            android:id="@+id/user_info_nation1"
            android:text="@string/national"
            android:textSize="20sp"
            android:textColor="#000000"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_info_certificate_num"
            app:layout_constraintTop_toTopOf="@id/user_info_nation1"
            android:text="@string/test_national"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/user_info_nation"
            android:background="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_info_nation1"
            app:layout_constraintTop_toTopOf="@id/user_info_nation1"
            android:layout_marginTop="60dp"
            android:text="@string/working_station"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/user_illness_working1"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/user_illness_working1"
            app:layout_constraintStart_toStartOf="@id/user_info_nation"
            android:text="@string/working_place_test"
            android:background="@null"
            android:textSize="20sp"
            android:textColor="#000000"
            android:maxLength="10"
            android:id="@+id/user_illness_working"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_illness_working1"
            app:layout_constraintTop_toTopOf="@id/user_illness_working1"
            android:layout_marginTop="60dp"
            android:text="@string/home_address"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/user_illness_home_address1"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_illness_working"
            app:layout_constraintTop_toTopOf="@id/user_illness_home_address1"
            android:background="@null"
            android:text="@string/test_home_address"
            android:textSize="20sp"
            android:textColor="#000000"
            android:maxLength="10"
            android:id="@+id/user_illness_home_address"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_illness_home_address1"
            app:layout_constraintTop_toTopOf="@id/user_illness_home_address1"
            android:layout_marginTop="60dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/call_phone"
            android:id="@+id/illness_detials_call_phone1"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/user_illness_home_address"
            app:layout_constraintTop_toTopOf="@id/illness_detials_call_phone1"
            android:text="@string/test_call_phone"
            android:background="@null"
            android:textSize="20sp"
            android:textColor="#000000"
            android:id="@+id/illness_detials_call_phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_call_phone1"
            app:layout_constraintTop_toTopOf="@id/illness_detials_call_phone1"
            android:layout_marginTop="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:layout_width="360dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/user_illness_detials_Constraint1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:background="@drawable/backfround_green1"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:id="@+id/user_illness_detials_Btn_save"
        android:stateListAnimator="@null"/>

</androidx.constraintlayout.widget.ConstraintLayout>