<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserIllnessDetailsActivity"
    android:background="@drawable/background_shadow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:id="@+id/user_illness_detials_linear1"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testName"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="#000000"
            android:id="@+id/user_illness_patient_name"/>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:background="#515151"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:text="@string/test_num"
            android:id="@+id/user_illness_case_id"/>

    </LinearLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_illness_detials_linear1"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:id="@+id/user_illness_detials_Constraint"
        android:orientation="vertical">
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_informaition"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/illness_details_confirm_information"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_time"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/illness_details_confirm_information"
            app:layout_constraintStart_toStartOf="@id/illness_details_confirm_information"
            android:layout_marginTop="12dp"
            android:id="@+id/illness_detials_visit_time1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/illness_detials_visit_time1"
            app:layout_constraintTop_toTopOf="@id/illness_detials_visit_time1"
            android:textSize="14sp"
            android:layout_marginStart="28dp"
            android:text="@string/test_time"
            android:textColor="#000000"
            android:id="@+id/illness_detials_visit_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/illness_detials_visit_time1"
            app:layout_constraintStart_toStartOf="@id/illness_detials_visit_time1"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_hospital_name"
            android:id="@+id/illness_detials_hospital"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_visit_time"
            app:layout_constraintTop_toTopOf="@id/illness_detials_hospital"
            android:text="@string/confirm_hospital_name_bean"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_hospital"
            app:layout_constraintTop_toBottomOf="@id/illness_detials_hospital"
            android:layout_marginTop="10dp"
            android:id="@+id/illness_detials_office_name1"
            android:text="@string/confirm_office_name"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_visit_time"
            app:layout_constraintTop_toTopOf="@id/illness_detials_office_name1"
            android:id="@+id/illness_detials_office_name"
            android:text="@string/office_info_office_name"
            android:textColor="#000000"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_office_name1"
            app:layout_constraintTop_toBottomOf="@id/illness_detials_office_name1"
            android:layout_marginTop="10dp"
            android:text="@string/doctor_title"
            android:textSize="14sp"
            android:id="@+id/illness_detials_doctitle1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_office_name"
            app:layout_constraintTop_toTopOf="@id/illness_detials_doctitle1"
            android:text="@string/docotr_title_maindoc"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/illness_detials_doctitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_doctitle1"
            app:layout_constraintTop_toBottomOf="@id/illness_detials_doctitle1"
            android:layout_marginTop="10dp"
            android:text="@string/doctor_cost"
            android:textSize="14sp"
            android:id="@+id/illness_detials_order_cost1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_doctitle"
            app:layout_constraintTop_toTopOf="@id/illness_detials_order_cost1"
            android:text="@string/test_cost"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/illness_detials_order_cost"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_order_cost1"
            app:layout_constraintTop_toBottomOf="@id/illness_detials_order_cost1"
            android:layout_marginTop="10dp"
            android:id="@+id/illness_detials_order_id1"
            android:text="@string/order_id"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/illness_detials_order_cost"
            app:layout_constraintTop_toTopOf="@id/illness_detials_order_id1"
            android:text="12345657"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/illness_detials_order_id"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintStart_toStartOf="@id/illness_detials_order_cost1"
            app:layout_constraintTop_toBottomOf="@id/illness_detials_order_id1"
            android:layout_marginTop="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/user_illness_detials_Constraint"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/illness_detials_Linear2"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/illealdetials"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:maxLength="80"
            android:id="@+id/illness_detials_illness_detials"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/illness_detials_Linear2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/illness_detials_Linear3"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explanation"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/about_explanation" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#40E0D0"
        android:layout_marginBottom="1dp"
        android:text="@string/back_num"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:id="@+id/illness_detials_btn_back_num"/>


</androidx.constraintlayout.widget.ConstraintLayout>