<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adpter_order_query_Conlayout1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait_for_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:id="@+id/adpter_order_query_wait_for_num"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adpter_order_query_wait_for_num"
        android:text="@string/confirm_office_name"
        android:layout_marginStart="10dp"
        android:id="@+id/adpter_order_query_office_name1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/adpter_order_query_office_name1"
        app:layout_constraintTop_toBottomOf="@id/adpter_order_query_wait_for_num"
        android:text="@string/office_info_office_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:id="@+id/adpter_order_query_office_name"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/adpter_order_query_office_name1"
        app:layout_constraintTop_toBottomOf="@id/adpter_order_query_office_name1"
        android:text="@string/doctor_title"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:id="@+id/adpter_order_query_office_title1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/adpter_order_query_office_title1"
        app:layout_constraintTop_toTopOf="@id/adpter_order_query_office_title1"
        android:text="@string/docotr_title_maindoc"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:id="@+id/adpter_order_query_office_title"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/adpter_order_query_office_title1"
        app:layout_constraintTop_toBottomOf="@id/adpter_order_query_office_title1"
        android:text="@string/visit_time"
        android:layout_marginTop="10dp"
        android:id="@+id/adpter_order_query_office_time1"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/adpter_order_query_office_time1"
        app:layout_constraintTop_toTopOf="@id/adpter_order_query_office_time1"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/test_time"
        android:id="@+id/adpter_order_query_office_time"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/adpter_order_query_office_title1"
        android:src="@mipmap/in_gray"
        android:layout_marginEnd="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>