<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="480dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:cardCornerRadius="30dp">

        <Button
            android:id="@+id/myself_btn1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/backfround_blue"
            android:text="@string/my_info"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/myself_btn2"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="184dp"
            android:background="@drawable/backfround_orange"
            android:text="@string/order_query"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/myself_btn3"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="344dp"
            android:background="@drawable/backfround_red"
            android:text="@string/sign_out"
            android:textColor="#ffffff"
            android:textSize="16sp"/>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>